--- a/style.css
+++ b/style.css
@@ -1,87 +1,102 @@
-body{
-    background-color:rgb(240,240,240);
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    margin:0px;
-    padding:0px;
-    color:#293133;
-    font-size: 18px;
+body {
+  background-color: rgb(240, 240, 240);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif,
+    BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  margin: 0px;
+  padding: 0px;
+  color: #293133;
+  font-size: 18px;
 }
-#wrapper{
-    max-width: 1024px;
-    margin-left: auto;
-    margin-right: auto;
+#wrapper {
+  max-width: 1024px;
+  margin-left: auto;
+  margin-right: auto;
 }
-header{
-    position: relative;
-    border-bottom: 2px solid #293133;
-    height:210px ;
-   
-    
-    
+header {
+  position: relative;
+  border-bottom: 2px solid #293133;
+  height: 210px;
 }
-.logo{
-    position: absolute;
-    width: 235px;
-    text-align: right;
-    right: 5px;
-    margin:20px;
-    
+.logo {
+  position: absolute;
+  width: 235px;
+  text-align: right;
+  right: 5px;
+  margin: 20px;
 }
-.name{
-    text-align: center;
-
+.name {
+  text-align: center;
 }
-.name h3{
-    margin:5px 0px;
-    line-height: 1;
-    color:#293133;
+.name h3 {
+  margin: 5px 0px;
+  line-height: 1;
+  color: #293133;
 }
-.picture{
-    text-align: center;
+.picture {
+  text-align: center;
 }
-.picture img{
-    border-radius: 70px;
-    text-align: center;
+.picture img {
+  border-radius: 70px;
+  text-align: center;
 }
 .contact,
 .summary,
 .education,
 .skills,
-.english{
-    border-bottom: 1px solid #ccc;
-    
+.english,
+.courses,
+.portfolio {
+  border-bottom: 1px solid #ccc;
 }
-.email{
-    list-style: none;
-    background: url(image/mail.png) no-repeat 0; 
-   padding-left:25px; 
+.email {
+  list-style: none;
+  background: url(image/mail.png) no-repeat 0;
+  padding-left: 25px;
 }
-.phone{
-    list-style: none;
-    background: url(image/phone.png) no-repeat 0; 
-   padding-left:25px;
+.phone {
+  list-style: none;
+  background: url(image/phone.png) no-repeat 0;
+  padding-left: 25px;
 }
-.telegram{
-    list-style: none;
-    background: url(image/telegram.png) no-repeat 0; 
-   padding-left:25px;
+.telegram {
+  list-style: none;
+  background: url(image/telegram.png) no-repeat 0;
+  padding-left: 25px;
 }
 
-ul{
-   padding-left:20px;
-   list-style: none;
+ul {
+  padding-left: 20px;
+  list-style: none;
 }
- p{
-    padding-left: 20px;
+p {
+  padding-left: 20px;
+}
+footer {
+  height: 80px;
+  text-align: center;
+  padding-top: 50px;
+}
+footer p {
+  margin: 0;
+}
 
+.courses ul li a {
+  color: black;
+  text-decoration: none;
 }
-footer{
-    height: 80px;
-    text-align: center;
-   padding-top: 50px;
- 
+.portfolio a {
+  text-decoration: none;
+  font-weight: 600;
+  color: black;
+  transition: 0.3s;
 }
-footer p{
-    margin: 0;
+.portfolio a:hover {
+  color: #293133;
 }
-  
+details {
+  border: none;
+  outline: none;
+  margin-bottom: 20px;
+}
